Shift external to github

--- a/webapp/form.html
+++ b/webapp/form.html
@@ -2,8 +2,8 @@
 
 <html lang="en" dir="ltr">
   <head>
-    <script src="pace.min.js"></script>
-    <link href="style.css" rel="stylesheet" />
+    <script src="https://anunayj.github.io/pace.min.js"></script>
+    <link href="https://anunayj.github.io/pace-style.css" rel="stylesheet" />
     <script src='http://ricostacruz.com/nprogress/nprogress.js'></script>
     <link rel='stylesheet' href='http://ricostacruz.com/nprogress/nprogress.css'/>
     <style media="screen">
