--- a/webapp/form.html
+++ b/webapp/form.html
@@ -424,7 +424,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
     <script src="http://malsup.github.com/jquery.form.js"></script>
      <script>
-     var serverip = "http://anunay.dlinkddns.com:8080"
+     var serverip = "https://rgpv-bot.herokuapp.com"
      var uuid;
      var progress=0;
      var intervalId
