Was trying to save some memory... Doesn't feel worth it.

--- a/webapp/form.html
+++ b/webapp/form.html
@@ -575,7 +575,7 @@
         <h2>Heyo! Don't feel like wasting your time? Get your result in a fully fledged spreadsheet here:</h2>
         <div class="form-group">
           <select id="deptCode" name="deptCode">
-            <option value="0">B.E.</optiYou can't change the type of an element like that, instead you have to create a new element and move the contents into it. Example:on>
+            <option value="0">B.E.</option>
             <option value="1">B. Tech.
             <option value="2">M.C.A</option>
             <option value="3">B. Pharm</option>
@@ -844,5 +844,7 @@
         <button type="submit" class="button" name = "submit" id="submit"><span id="submitText" name="submitText">Submit it!</span><span name="download" id="download" hidden = "true">Download!</span></button>
       </div>
     </form>
-    </div>  </body>
+    </div>
+<font size="2" color='gray'>This website was developed and is being maintained by Anunay (<a href="mailto:anunay.j1@gmail.com">anunay.j1@gmail.com</a>), Please contact me for further support : ) or help.</font>
+   </body>
 </html>
